Package Windows app image